[package]
name = "lumos-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
lumos-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-sdk = { workspace = true }
lumos-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []
