[package]
name = "lumos-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
lumos-account-decoder = { workspace = true }
lumos-accounts-db = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-client = { workspace = true }
lumos-faucet = { workspace = true }
lumos-gossip = { workspace = true }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-rpc-client = { workspace = true, features = ["default"] }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-version = { workspace = true }
lpl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
lumos-core = { workspace = true }
lumos-local-cluster = { workspace = true }
lumos-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lumos-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
