[package]
name = "lumos-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }

rand = { workspace = true }

lumos-account-decoder = { workspace = true }
lumos-accounts-db = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-client = { workspace = true }
lumos-faucet = { workspace = true }
lumos-gossip = { workspace = true }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-version = { workspace = true }
lumos-core = { workspace = true }
lumos-local-cluster = { workspace = true }
lumos-test-validator = { workspace = true }

lpl-token = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
