[package]
name = "lumos-accounts-db"
description = "Lumos accounts db"
documentation = "https://docs.rs/lumos-acounts-db"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bv = { workspace = true }
byteorder = { workspace = true }
bzip2 = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
fnv = { workspace = true }
im = { workspace = true }
index_list = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lz4 = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
percentage = { workspace = true }
qualifier_attr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
seqlock = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

crossbeam-channel = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }

lumos-bucket-map = { workspace = true }
lumos-config-program = { workspace = true }
lumos-frozen-abi = { workspace = true }
lumos-frozen-abi-macro = { workspace = true }
lumos-measure = { workspace = true }
lumos-metrics = { workspace = true }
nohash-hasher = { workspace = true }
lumos-program-runtime = { workspace = true }
lumos-rayon-threadlimit = { workspace = true }
lumos-sdk = { workspace = true }
lumos-stake-program = { workspace = true }
lumos-lvm = { workspace = true }
lumos-system-program = { workspace = true }
lumos-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_accounts_db"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "bench_hashing"
harness = false
