[package]
name = "lumos-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
rayon = { workspace = true }

lumos-crossbeam-channel = { workspace = true }
lumos-rand = { workspace = true }

lumos-client = { workspace = true }
lumos-core = { workspace = true }
lumos-gossip = { workspace = true }
lumos-ledger = { workspace = true }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-perf = { workspace = true }
lumos-poh = { workspace = true, features = ["dev-context-only-utils"] }
lumos-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-tpu-client = { workspace = true }
lumos-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
