[package]
name = "lumos-banks-client"
description = "Lumos banks client"
documentation = "https://docs.rs/lumos-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }

lumos-tokio = { workspace = true, features = ["full"] }
lumos-tokio-serde = { workspace = true, features = ["bincode"] }

lumos-banks-interface = { workspace = true }
lumos-program = { workspace = true }
lumos-sdk = { workspace = true }

[dev-dependencies]
lumos-banks-server = { workspace = true }
lumos-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "lumos_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
