[package]
name = "lumos-banks-server"
description = "Lumos banks server"
documentation = "https://docs.rs/lumos-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
lumos-banks-interface = { workspace = true }
lumos-client = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-send-transaction-service = { workspace = true }
lumos-lvm = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "lumos_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
