[package]
name = "lumos-bench-streamer"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["cargo"] }

crossbeam-channel = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-streamer = { workspace = true }
lumos-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
