[package]
name = "lumos-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

lumos-crossbeam-channel = { workspace = true }
lumos-rand = { workspace = true }

lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-client = { workspace = true }
lumos-connection-cache = { workspace = true }
lumos-core = { workspace = true }
lumos-faucet = { workspace = true }
lumos-genesis = { workspace = true }
lumos-gossip = { workspace = true }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-metrics = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-rpc = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-rpc-client-api = { workspace = true }
lumos-rpc-client-nonce-utils = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-tpu-client = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-version = { workspace = true }
lpl-instruction-padding = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

lumos-local-cluster = { workspace = true }
lumos-runtime = { workspace = true }
lumos-test-validator = { workspace = true }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
