[package]
name = "lumos-bloom"
description = "Lumos bloom filter"
documentation = "https://docs.rs/lumos-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }

lumos-rand = { workspace = true }
lumos-frozen-abi = { workspace = true }
lumos-frozen-abi-macro = { workspace = true }
lumos-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
