[package]
name = "lumos-bucket-map"
description = "lumos-bucket-map"
documentation = "https://docs.rs/lumos-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
lumos-measure = { workspace = true }
lumos-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
lumos-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_bucket_map"

[[bench]]
name = "bucket_map"
