[package]
name = "lumos-cargo-registry"
description = "Lumos cargo registry"
documentation = "https://docs.rs/lumos-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

lumos-clap-utils = { workspace = true }
lumos-cli = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-cli-output = { workspace = true, optional = true }
lumos-logger = { workspace = true }
lumos-remote-wallet = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-rpc-client-api = { workspace = true }
lumos-sdk = { workspace = true }
lumos-version = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }


