[package]
name = "lumos-cli-output"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lumos-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lumos-account-decoder = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-rpc-client-api = { workspace = true }
lumos-sdk = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-vote-program = { workspace = true }
lpl-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
