[package]
name = "lumos-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lumos-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
lumos-account-decoder = { workspace = true }
lumos-bpf-loader-program = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-cli-output = { workspace = true }
lumos-client = { workspace = true }
lumos-config-program = { workspace = true }
lumos-faucet = { workspace = true }
lumos-loader-v4-program = { workspace = true }
lumos-logger = { workspace = true }
lumos-program-runtime = { workspace = true }
lumos-pubsub-client = { workspace = true }
lumos-remote-wallet = { workspace = true, features = ["default"] }
lumos-rpc-client = { workspace = true, features = ["default"] }
lumos-rpc-client-api = { workspace = true }
lumos-rpc-client-nonce-utils = { workspace = true }
lumos-sdk = { workspace = true }
lumos-tpu-client = { workspace = true, features = ["default"] }
lumos-transaction-status = { workspace = true }
lumos-version = { workspace = true }
lumos-vote-program = { workspace = true }
lumos-rbpf = { workspace = true }
lpl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
lumos-streamer = { workspace = true }
lumos-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "lumos"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
