[package]
name = "lumos-client-test"
description = "Lumos RPC Test"
documentation = "https://docs.rs/lumos-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
systemstat = { workspace = true }
tungstenite = { workspace = true }

rand = { workspace = true }

lumos-client = { workspace = true }
lumos-ledger = { workspace = true }
lumos-measure = { workspace = true }
lumos-merkle-tree = { workspace = true }
lumos-metrics = { workspace = true }
lumos-perf = { workspace = true }
lumos-pubsub-client = { workspace = true }
lumos-rayon-threadlimit = { workspace = true }
lumos-rpc = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-rpc-client-api = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-test-validator = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-version = { workspace = true }
tokio = { workspace = true, features = ["full"] }
lumos-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
