[package]
name = "lumos-client"
description = "Lumos Client"
documentation = "https://docs.rs/lumos-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }


lumos-connection-cache = { workspace = true }
lumos-measure = { workspace = true }
lumos-metrics = { workspace = true }
lumos-pubsub-client = { workspace = true }
lumos-quic-client = { workspace = true }
lumos-rpc-client = { workspace = true, features = ["default"] }
lumos-rpc-client-api = { workspace = true }
lumos-rpc-client-nonce-utils = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-thin-client = { workspace = true }
lumos-tpu-client = { workspace = true, features = ["default"] }
lumos-udp-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
