[package]
name = "lumos-connection-cache"
description = "Lumos Connection Cache"
documentation = "https://docs.rs/lumos-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand-chacha = { workspace = true }

lumos-measure = { workspace = true }
lumos-metrics = { workspace = true }
lumos-sdk = { workspace = true }
tokio = { workspace = true }
lumos-logger = { workspace = true }
lumos-net-utils = { workspace = true }
