[package]
name = "lumos-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lumos-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "gaokanxu/lumos", branch = "main", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
eager = { workspace = true }
etcd-client = { workspace = true }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
trees = { workspace = true }

crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand-chacha = { workspace = true }

lumos-accounts-db = { workspace = true }
lumos-bloom = { workspace = true }
lumos-client = { workspace = true }
lumos-cost-model = { workspace = true }
lumos-entry = { workspace = true }
lumos-frozen-abi = { workspace = true }
lumos-frozen-abi-macro = { workspace = true }
lumos-geyser-plugin-manager = { workspace = true }
lumos-gossip = { workspace = true }
lumos-ledger = { workspace = true }
lumos-measure = { workspace = true }
lumos-metrics = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-perf = { workspace = true }
lumos-poh = { workspace = true }
lumos-program-runtime = { workspace = true }
lumos-quic-client = { workspace = true }
lumos-rayon-threadlimit = { workspace = true }
lumos-rpc = { workspace = true }
lumos-rpc-client-api = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-send-transaction-service = { workspace = true }
lumos-streamer = { workspace = true }
lumos-lvm = { workspace = true }
lumos-tpu-client = { workspace = true }
lumos-transaction-status = { workspace = true }
lumos-turbine = { workspace = true }
lumos-unified-scheduler-pool = { workspace = true }
lumos-version = { workspace = true }
lumos-vote = { workspace = true }
lumos-vote-program = { workspace = true }
lumos-wen-restart = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
lumos-core = { path = "." }
lumos-logger = { workspace = true }
lumos-poh = { workspace = true }
lumos-program-runtime = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
