[package]
name = "lumos-cost-model"
description = "Lumos cost model"
documentation = "https://docs.rs/lumos-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
lumos-address-lookup-table-program = { workspace = true }
lumos-bpf-loader-program = { workspace = true }
lumos-compute-budget-program = { workspace = true }
lumos-config-program = { workspace = true }
lumos-frozen-abi = { workspace = true }
lumos-frozen-abi-macro = { workspace = true }
lumos-loader-v4-program = { workspace = true }
lumos-metrics = { workspace = true }
lumos-program-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-stake-program = { workspace = true }
lumos-system-program = { workspace = true }
lumos-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_cost_model"

[dev-dependencies]
lumos-logger = { workspace = true }
lumos-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
