[package]
name = "lumos-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
lumos-bench-tps = { workspace = true }
lumos-client = { workspace = true }
lumos-core = { workspace = true }
lumos-faucet = { workspace = true }
lumos-gossip = { workspace = true }
lumos-logger = { workspace = true }
lumos-measure = { workspace = true }
lumos-net-utils = { workspace = true }
lumos-perf = { workspace = true }
lumos-quic-client = { workspace = true }
lumos-rpc = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-sdk = { workspace = true }
lumos-streamer = { workspace = true }
lumos-tpu-client = { workspace = true }
lumos-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
lumos-local-cluster = { workspace = true }
