[package]
name = "lumos-entry"
description = "Lumos Entry"
documentation = "https://docs.rs/lumos-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

crossbeam-channel = { workspace = true }
rand = { workspace = true }

lumos-measure = { workspace = true }
lumos-merkle-tree = { workspace = true }
lumos-metrics = { workspace = true }
lumos-perf = { workspace = true }
lumos-rayon-threadlimit = { workspace = true }
lumos-sdk = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
lumos-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
