[package]
name = "lumos-faucet"
description = "Lumos Faucet"
documentation = "https://docs.rs/lumos-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-logger = { workspace = true }
lumos-metrics = { workspace = true }
lumos-sdk = { workspace = true }
lumos-version = { workspace = true }
lpl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "lumos_faucet"

[[bin]]
name = "lumos-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
