[package]
name = "lumos-frozen-abi"
description = "Lumos Frozen ABI"
documentation = "https://docs.rs/lumos-frozen-abi"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
log = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
sha2 = { workspace = true }
lumos-frozen-abi-macro = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "lumos"))'.dependencies]
block-buffer = { workspace = true }
either = { workspace = true, features = ["use_std"] }
generic-array = { workspace = true, features = ["serde", "more_lengths"] }
im = { workspace = true, features = ["rayon", "serde"] }
memmap2 = { workspace = true }
subtle = { workspace = true }

[target.'cfg(not(target_os = "lumos"))'.dev-dependencies]
bitflags = { workspace = true }
lumos-logger = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
