[package]
name = "lumos-genesis-utils"
description = "Lumos Genesis Utils"
documentation = "https://docs.rs/lumos-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
lumos-accounts-db = { workspace = true }
lumos-download-utils = { workspace = true }
lumos-rpc-client = { workspace = true }
lumos-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lumos_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
