[package]
name = "lumos-genesis"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lumos-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
lumos-accounts-db = { workspace = true }
lumos-clap-utils = { workspace = true }
lumos-cli-config = { workspace = true }
lumos-entry = { workspace = true }
lumos-ledger = { workspace = true }
lumos-logger = { workspace = true }
lumos-runtime = { workspace = true }
lumos-sdk = { workspace = true }
lumos-stake-program = { workspace = true }
lumos-version = { workspace = true }
lumos-vote-program = { workspace = true }
tempfile = { workspace = true }


[[bin]]
name = "lumos-genesis"
path = "src/main.rs"

[lib]
name = "lumos_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
